# picoca

./: README.md  pico-uart.uf2
arduino/depth/: depth.ino
c/: CMakeLists.txt
c/pico-test/: CMakeLists.txt
circuitpython/depth/: code.py
circuitpython/led/: code.py
circuitpython/motor/: code.py
circuitpython/picoca_workshop/: code.py
debug_mode/: debug_mode.ino
depth/: depth.ino
led/: led.ino
motor/: motor.ino
picoca_workshop/: picoca_workshop.ino
src/depth/: depth.ino
src/led/: led.ino
src/motor/: motor.ino
src/picoca_workshop/: picoca_workshop.ino
test/c/pico-test/: pico-test.c
test/debug_mode/: debug_mode.ino
test/pid/: pid.ino
